# bygo

./: .travis.yml  CMakeLists.txt  README.md  bygo-config.cmake.in  main.cpp
.github/workflows/: build.yml  c-cpp.yml
examples/: CMakeLists.txt  example1.cpp
include/: CMakeLists.txt  bygo.hpp
include/bygo/: basic.hpp  bygo.hpp  ctype.hpp  op.hpp  prop.hpp  random.hpp  util.hpp
include/bygo/aux/: aux.hpp
include/bygo/basic/: basic_elem.hpp  entity.hpp  eye.hpp  fill.hpp  matrix.hpp
include/bygo/ctype/: eye.hpp
include/bygo/helper/: helper.hpp
include/bygo/op/: add.hpp  apply.hpp  assign.hpp  concat.hpp  div.hpp  dot.hpp  fill.hpp  insert copy.hpp  insert.hpp  inv.hpp  mult.hpp  rref.hpp  slice.hpp  stack.hpp  subtract.hpp  swap_elem.hpp  transpose.hpp
include/bygo/prop/: ax.hpp  shape.hpp
include/bygo/random/: random.hpp
include/bygo/util/: print.hpp  util.hpp
tests/: CMakeLists.txt
tests/bygo/basic/: basic_elem.cpp  entity.cpp
tests/bygo/op/: apply.cpp
